[workspace]
members = ["packages/*", "scripts"]
resolver = "3"

[workspace.package]
authors = ["Nixy <info@nixy.software>"]
description = "OpenAPI client for Firefly III."
edition = "2024"
license = "MIT"
repository = "https://github.com/NixySoftware/firefly-iii"
version = "0.1.0"

[workspace.dependencies]
